--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MUTABA'AH RAMADHAN</title>
+  <title>PRESENSI SISWA</title>
   <link rel="icon" href="https://mentariilmu.org/logo.png" />
   <style>
     html,
